--- a/Nethereum.UI/Nethereum.UI.Droid/packages.config
+++ b/Nethereum.UI/Nethereum.UI.Droid/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Common.Logging.Core" version="3.4.1" targetFramework="monoandroid71" />
-  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="monoandroid71" />
+  <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid81" />
   <package id="Microsoft.NETCore.Platforms" version="2.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid60" />
   <package id="MvvmCross" version="6.0.1" targetFramework="monoandroid81" />
@@ -27,14 +27,19 @@
   <package id="NETStandard.Library" version="2.0.3" targetFramework="monoandroid71" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid60" />
   <package id="Portable.BouncyCastle" version="1.8.2" targetFramework="monoandroid71" />
+  <package id="ReactiveUI" version="8.2.1" targetFramework="monoandroid81" />
+  <package id="Splat" version="4.0.0" targetFramework="monoandroid81" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.ComponentModel" version="4.0.1" targetFramework="monoandroid81" />
   <package id="System.ComponentModel.TypeConverter" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Console" version="4.3.1" targetFramework="monoandroid71" />
+  <package id="System.Diagnostics.Contracts" version="4.0.1" targetFramework="monoandroid81" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Dynamic.Runtime" version="4.0.11" targetFramework="monoandroid81" />
   <package id="System.Globalization" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.IO" version="4.3.0" targetFramework="monoandroid60" />
@@ -48,6 +53,11 @@
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="monoandroid81" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="monoandroid81" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="monoandroid81" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="monoandroid81" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="monoandroid81" />
   <package id="System.Reflection" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="monoandroid60" />
@@ -57,6 +67,7 @@
   <package id="System.Runtime.Handles" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Runtime.InteropServices.WindowsRuntime" version="4.3.0" targetFramework="monoandroid81" />
   <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.Serialization.Formatters" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="monoandroid60" />
@@ -94,5 +105,6 @@
   <package id="Xamarin.Android.Support.v7.RecyclerView" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Android.Support.Vector.Drawable" version="27.0.2" targetFramework="monoandroid81" />
   <package id="Xamarin.Build.Download" version="0.4.11" targetFramework="monoandroid81" />
-  <package id="Xamarin.Forms" version="3.1.0.530888-pre2" targetFramework="monoandroid71" />
+  <package id="Xamarin.Forms" version="3.0.0.550146" targetFramework="monoandroid81" />
+  <package id="Xamarin.Forms.DataGrid" version="3.1.0" targetFramework="monoandroid81" />
 </packages>
