--- a/Nethereum.UI/Nethereum.UI.UWP/Nethereum.UI.UWP.csproj
+++ b/Nethereum.UI/Nethereum.UI.UWP/Nethereum.UI.UWP.csproj
@@ -152,7 +152,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>6.1.5</Version>
+      <Version>6.2.0-Preview1-26502-02</Version>
     </PackageReference>
     <PackageReference Include="MvvmCross">
       <Version>6.0.1</Version>
